--- a/influcid-Romania/index-en.html
+++ b/influcid-Romania/index-en.html
@@ -423,7 +423,7 @@ The efficacy and safety of Influcid has been studied in many clinical trials, in
             <div class="block-7">
               <h2>WHERE TO BUY</h2>
               <!-- <div class="block-7__img"></div> -->
-              <div class="apt-container">
+              <!-- <div class="apt-container">
                 <a href="https://farmaciafamiliei.md/"></a>
                 <a href="http://medicamente.md/"></a>
                 <a href="https://felicia.md/ro/"></a>
@@ -432,7 +432,7 @@ The efficacy and safety of Influcid has been studied in many clinical trials, in
                 <a href="https://farmacie.md/"></a>
                 <a href="https://www.farmacieonline.md/"></a>
                 <a href="https://farmacie-online.md/ru/"></a>
-              </div>
+              </div> -->
               <div class="block-7__text">
                 <h3>Evidential base</h3>
                 <ol>
