--- a/influcid-Romania/index.html
+++ b/influcid-Romania/index.html
@@ -426,7 +426,7 @@
             <div class="block-7">
               <h2>Rezervează Influcid la cea mai aproape farmacie</h2>
               <!-- <div class="block-7__img"></div> -->
-              <div class="apt-container">
+              <!-- <div class="apt-container">
                 <a href="https://farmaciafamiliei.md/"></a>
                 <a href="http://medicamente.md/"></a>
                 <a href="https://felicia.md/ro/"></a>
@@ -435,7 +435,7 @@
                 <a href="https://farmacie.md/"></a>
                 <a href="https://www.farmacieonline.md/"></a>
                 <a href="https://farmacie-online.md/ru/"></a>
-              </div>
+              </div> -->
               <div class="block-7__text">
                 <h3>Baza de dovezi</h3>
                 <ol>
