--- a/Tansilotren/index-en.html
+++ b/Tansilotren/index-en.html
@@ -189,19 +189,23 @@
                 </button>
                 <div class="popup__body">
                     <div class="popup__message">
-                        <p><b>Children aged 2 to 6 years </b></p>
+                        <p><b>Children aged 6 to 12 years </b></p>
 
-                        <p><b>For acute ailments or for maintenance therapy:</b> 1 tab. 3 times a day.</p>
+                        <p><b>Acute period:</b> 1 tab. every 2 hours (up to 6 times a day) first 1-2 days until improvement.</p>
 
-                        <p><b>When the palatine tonsils are enlarged:</b> 
+                        <p><b>Maintenance therapy:</b> 
+                            1 tab. 3 times a day until absolute recovery.
+                            *If after 8 days of treatment there is no absolute recovery or new symptoms of the disease appear, you should consult a doctor.</p>
+
+                        <p><b>When the palatine tonsils are enlarged:</b>
                             1 tab. 3 times a day,
                             6-8 weeks.</p>
 
-                        <p><b>If there is a tendency to tonsillitis for the prevention of repeated episodes: </b>
+                        <p><b>If there is a tendency to tonsillitis for the prevention of repeated episodes:</b>
                             1 tab. 3 times a day,
                             6-8 weeks
-                            several courses per year.</p>
-
+                            several courses per year.
+                        </p>
                         <p>Tablets should be taken 30 minutes before or 30 minutes after meals, slowly dissolving in the mouth.</p>
 
                     </div>
