--- a/Tansilotren/index-en.html
+++ b/Tansilotren/index-en.html
@@ -15,7 +15,7 @@
 <a name='top'></a>
     <div class="outer-navigation-container">
         <div class="navigation-container">
-            <a class="logo-container" href="#top"></a>
+            <a class="logo-container logo-container-en" href="#top"></a>
             <a class="where-to-buy-mob" href="">Where to buy</a>
             <div class="navigation-menu">
                 <a class="navmenu" href="#block-1" >Formulation and action</a>
