--- a/Tansilotren/index-en.html
+++ b/Tansilotren/index-en.html
@@ -55,6 +55,8 @@
         </div>
     </div>
 
+<a class="instruction" href="./instruction.pdf"></a>
+
 
 <!--    end navigation-->
 
@@ -91,11 +93,11 @@
         <p>Natural
             <br>formulation</p>
     </div>
-    <div href="" class="block-2__plate">
+    <a href="https://www.clinicaltrialsregister.eu/ctr-search/search?query=tonsilotren" class="block-2__plate">
         <p>Proven<br>
-            effectiveness<sup>5</sup><a name="block-1"></a>
+            effectiveness<sup>5</sup>
         </p>
-    </div>
+    </a>
 </div>
 <h2>5 natural ingredients<br><b>for the prevention and treatment of tonsillitis</b></h2>
 <div class="block-4__container">
