--- a/Tansilotren/index.html
+++ b/Tansilotren/index.html
@@ -55,6 +55,7 @@
         </div>
     </div>
 
+<a class="instruction" href="./instruction.pdf"></a>
 
 <!--    end navigation-->
 
@@ -91,11 +92,11 @@
         <p>Натуральный
             <br>состав</p>
     </div>
-    <div href="" class="block-2__plate">
+    <a href="https://www.clinicaltrialsregister.eu/ctr-search/search?query=tonsilotren" class="block-2__plate block-2__plate-a">
         <p>ДоказанНАЯ<br>
-            эффективность<sup>5</sup><a name="block-1"></a>
+            эффективность<sup>5</sup>
         </p>
-    </div>
+    </a>
 </div>
 <h2> 5 натуральных компонентов<br><b>для профилактики и лечения ангины</b></h2>
 <div class="block-4__container">
