--- a/influcid-AZ/index.html
+++ b/influcid-AZ/index.html
@@ -428,7 +428,14 @@ Həmçinin çox vaxt ürək çatışmazlığı inkişaf edir.</p>
 
             <div class="block-7">
               <h2>HARADAN ALMALI</h2>
-              <div class="block-7__img"></div>
+              <div class="apt-container">
+                <a href="https://www.aptekonline.az/"></a>
+                <a href="http://www.zeferan.az/"></a>
+                <a href="https://aptekstore.az/"></a>
+              
+                <a href="https://www.ozonaptek.az/"></a>
+                <a href="https://www.melhem.az/"></a>
+              </div>
               <div class="block-7__text">
                 <h3>Sübutedici baza</h3>
                 <ol>
