--- a/KlimaktoplanV2/index.html
+++ b/KlimaktoplanV2/index.html
@@ -12,7 +12,8 @@
   </head>
   <body>
   <div class="navigation-logo">
-    <a  href="index.html" class="logo"></a>
+    <a  href="#top" class="logo"></a>
+    
     <div class="navigation-top" role="navigation">
       <div id="menuToggle">
         <input type="checkbox" /> <span></span> <span></span> <span></span>
@@ -34,13 +35,13 @@
       <a class="translated-text navmenu faq" key="g4" href="faq.html"></a>
       <a class="translated-text buy-btn" key="g5" href="#k3">Где купить?</a>
     </div>
-    <a class="instruction" href="./instruction.pdf"
+<!--     <a class="instruction" href="./instruction.pdf"
     ><p class="translated-text" key="instruction"></p></a
-    >
+    > -->
   </div>
 
 <!--  content-->
-
+<a name="top"></a>
 <div class="header-container">
   <div class="header-container__left-block">
     <div class="header-container__label"></div>
@@ -49,13 +50,13 @@
     </div>
   </div>
   <div class="header-container__new-woman"></div>
-  <a name="k1"></a>
+  
   <div class="mobile__top-block"></div>
   <div class="mobile__new-woman"></div>
 </div>
 
 
-<div class="second-container">
+<div class="second-container" ><a name="k1"></a>
   <div class="second-container__text">
     <h1>Климактоплан Н</h1>
     <p>ДЛЯ ОБЛЕГЧЕНИЯ ОСНОВНЫХ ПРОЯВЛЕНИЙ КЛИМАКСА</p>
@@ -85,13 +86,14 @@
   </div>
 <!--  <div class="second-container__plant">-->
 <!--    <div class="second-container__product"></div>-->
-<!--    <a name="k2"></a>-->
+    
 <!--  </div>-->
 </div>
 
 
-
+<a name="k2"></a>
   <div class="third-container">
+
   <div class="third-container__plate-container">
     <h3>Преимущества лечения с препаратом Климактоплан Н</h3>
     <div class="third-container__plate">
@@ -139,8 +141,11 @@
   </div>
   <div>
   </div>
+
 </div>
-  <a name="k3"></a>
+<div><a name="k3"></a></div>
+
+ 
   <h3 class="fifth-h3">Вы можете приобрести препарат Климактоплан Н в аптеках Вашего города или в интернет - аптеках:</h3>
 <div class="fifth-container">
   <a class="logo1" href="https://www.eapteka.ru/goods/id23311/ "></a>
