--- a/KlimaktoplanV2/usage.html
+++ b/KlimaktoplanV2/usage.html
@@ -30,12 +30,12 @@
       <a class="translated-text navmenu" key="g1" href="./index.html#k1">О продукте</a>
       <a class="translated-text navmenu" key="g2" href="./index.html#k2">Преимущества</a>
       <a class="translated-text navmenu" key="g4" href="./index.html#k4">Состав</a>
-      <a class="translated-text navmenu" key="g3" href="./index.html#k3">Инструкция по применению</a>
+      <a class="translated-text navmenu" key="g3" href="./usage.html">Инструкция по применению</a>
       <a class="translated-text navmenu faq" key="g4" href="faq.html"></a>
       <a class="translated-text navmenu buy-btn" key="g5" href="index.html#k3">Где купить?</a>
     </div>
-    <a class="instruction" href="./instruction.pdf"
-    ><p class="translated-text" key="instruction"></p></a>
+<!--     <a class="instruction" href="./instruction.pdf"
+    ><p class="translated-text" key="instruction"></p></a> -->
   </div>
 
 <!--  content-->
