--- a/Tansilotren/index-en.html
+++ b/Tansilotren/index-en.html
@@ -55,7 +55,7 @@
         </div>
     </div>
 
-<a class="instruction" href="./instruction.pdf"></a>
+<a class="instruction instruction-en" href="./instruction.pdf"></a>
 
 
 <!--    end navigation-->
@@ -72,9 +72,9 @@
             <div class="header-main-product-img-mobile"></div>
             <div class="header-main-center">
                 <p>Relieves inflammation and sore throat¹</p>
-                <p>Restores the protective<br>function of tonsils²´³</p>
+                <p><b>Restores the protective<br>function of tonsils²´³</b></p>
                 <p>Reduces the risk of <br>repeated tonsillitis and the need<br> for antibiotics²</p>
-                <p>Basic therapy for <br> chronic tonsillitis⁴</p>
+                <!-- <p>Basic therapy for <br> chronic tonsillitis⁴</p> -->
             </div>
             <div class="header-main-img"></div>
         </div>
