--- a/Tansilotren/index.html
+++ b/Tansilotren/index.html
@@ -71,9 +71,9 @@
                 <div class="header-main-product-img-mobile"></div>
                 <div class="header-main-center">
                     <p>Снимает воспаление и боль в горле¹</p>
-                    <p>Восстанавливает защитную<br>функцию миндалин² ³</p>
+                    <p><b>Восстанавливает защитную<br>функцию миндалин² ³</b></p>
                     <p>Уменьшает риск повторных ангин<br>и потребность в применении<br> антибиотиков²</p>
-                    <p>Базисная терапия<br> при хроническом тонзиллите⁴</p>
+                    <!-- <p>Базисная терапия<br> при хроническом тонзиллите⁴</p> -->
                 </div>
                 <div class="header-main-img"></div>
             </div>
