--- a/Tansilotren/index-en.html
+++ b/Tansilotren/index-en.html
@@ -99,7 +99,7 @@
         </p>
     </a>
 </div>
-<h2>5 natural ingredients<br><b>for the prevention and treatment of tonsillitis</b></h2>
+<h2 class='block-4-h2' >5 natural ingredients<br><b>for the prevention and treatment of tonsillitis</b></h2>
 <div class="block-4__container">
     <div class="block-interactive-inner">
         <div class="block-interactive-inner__img"></div>
