--- a/Tansilotren/index.html
+++ b/Tansilotren/index.html
@@ -98,7 +98,7 @@
         </p>
     </a>
 </div>
-<h2> 5 натуральных компонентов<br><b>для профилактики и лечения ангины</b></h2>
+<h2 class='block-4-h2'> 5 натуральных компонентов<br><b>для профилактики и лечения ангины</b></h2>
 <div class="block-4__container">
     <div class="block-interactive-inner">
         <div class="block-interactive-inner__img"></div>
@@ -510,7 +510,7 @@
 <!--        plate5-->
         <div class="block-5__plate">
             <div class="block-5__text">
-                <h4>Рекомендации<br>при
+                <h4>Рекомендации при
                     <br><b>ангине</b></h4>
                 <p>Когда воспалено горло, <b>возникают проблемы с голосом</b>. Помогите себе, чтобы снять воспаление и ощущение першения, когда возникает чувство, что «дерёт» в горле.
 
