--- a/Tansilotren/index.html
+++ b/Tansilotren/index.html
@@ -512,7 +512,7 @@
             <div class="block-5__text">
                 <h4>Рекомендации при
                     <br><b>ангине</b></h4>
-                <p>Когда воспалено горло, <b>возникают проблемы с голосом.</b>. Помогите себе снять воспаление, ощущение першения и чувство, что «дерёт» в горле. 
+                <p>Когда воспалено горло, <b>возникают проблемы с голосом.</b> Помогите себе снять воспаление, ощущение першения и чувство, что «дерёт» в горле. 
 
                 </p>
             </div>
@@ -525,7 +525,7 @@
                 <div class="block-5__text">
                     <h4>Рекомендации<br>при
                         <br><b>ангине</b></h4>
-                    <p>Когда воспалено горло, <b>возникают проблемы с голосом.</b>. Помогите себе снять воспаление, ощущение першения и чувство, что «дерёт» в горле.
+                    <p>Когда воспалено горло, <b>возникают проблемы с голосом.</b> Помогите себе снять воспаление, ощущение першения и чувство, что «дерёт» в горле.
 
                         По возможности следует избегать курения и употребления алкоголя в острой воспалительной фазе. Они дополнительно раздражают и ослабляют слизистые оболочки.</p>
                 </div>
