--- a/influcid-Romania/index.html
+++ b/influcid-Romania/index.html
@@ -76,7 +76,7 @@
             <p>Compoziție naturală</p>
           </a>
           <a href="https://www.clinicaltrialsregister.eu/ctr-search/search?query=Influcid" class="block-2__plate">
-            <p>Eficiență dovedită</p>
+            <p>Eficiență dovedită<sup>**</sup></p>
           </a>
         </div>
       </header>
@@ -87,7 +87,7 @@
             Elimină simptomele generale ale răcelii. ¹
           </p>
           <p>
-            Reduce necesitatea în medicamente simptomatice (antipiretice, picături nazale, medicamente pentru tuse) .²
+            Reduce necesitatea pentru medicamente simptomatice (antipiretice, picături nazale, medicamente pentru tuse) .²
           </p>
           <p>
             Contribuie la recuperarea rapidă.¹
@@ -105,13 +105,13 @@
           <div class="block-2__image"> 
             <b>
               Întărește protecția<br>naturală a organismului
-              și favorizează accelerează<br>însănătoșirea rapidă¹
+              și favorizează<br>însănătoșirea rapidă¹
             </b>
           </div>
           <div class="block-2__text">
             <p>Reduce febra</p>
             <p>Elimină durerile musculare</p>
-            <p>Calmează cefaleea</p>
+            <p>Calmează durerea de cap</p>
             <p>Reduce congestia nazală</p>
             <p>Elimină iritația și durerile în gât</p>
             <p>Previne dezvoltarea  bolii</p>
@@ -121,7 +121,7 @@
       <a name="block-3"></a>
       <div class="block-3">
         <h2>
-          6 COMPONENTE NATURALE<br />
+          6 INGREDIENTE NATURALE<br />
           PENTRU LUPTA CU VIRUȘII
         </h2>
         <div class="prod-mobile"></div>
@@ -140,7 +140,7 @@
           <div class="block-3__product"></div>
           <div class="block-3__right-block">
             <div class="block-3__plate">
-              <p>Eupatorium</p>
+              <p>Eupatorium perfoliatum</p>
             </div>
             <div class="block-3__plate">
               <p>Phosphorus</p>
@@ -168,13 +168,13 @@
         <div class="block-5__container">
           <div class="container__subcontainer">
             <p>
-              <b>Copii de la 1-12 ani:</b> de dizolvat în gură 1 comprimat  la fiecare 2 ore (nu mai mult de 8 comprimate pe zi) până la ameliorare
+              <b>Copii de la 1-12 ani:</b> se dizolvă complet în gură 1 comprimat  la fiecare 2 ore (nu mai mult de 8 comprimate pe zi) până la ameliorare
             </p>
             <div class="subcontainer">
               <div class="subcontainer-particle-1">
                 <b>ÎN PRIMA ZI</b>
 <!--                <b class="subtext"></b>-->
-                <p>1 comprimat la fiecare 2 ore </p>
+                <p>La fiecare 2 ore 1 comprimat </p>
               </div>
               <div class="subcontainer-particle-2">
                 <div class="clock-img"></div>
@@ -182,7 +182,7 @@
               </div>
               <div class="subcontainer-particle-1">
                 <b>
-                  TRATAMENTUL ULTERIOR
+                  TRATAMENT ULTERIOR
                 </b>
                 <b class="subtext">Până la recuperare</b>
                 <p>1 comprimat de 3 ori/zi</p>
@@ -196,13 +196,13 @@
 
           <div class="container__subcontainer">
             <p>
-              <b>Copii de la 12 ani și adulți:</b> de dizolvat în gură 1 comprimat la fiecare oră (nu mai mult de 12 comprimate pe zi) până la ameliorare
+              <b>Copii de la 12 ani și adulți:</b> se dizolvă complet în gură 1 comprimat la fiecare oră (nu mai mult de 12 comprimate pe zi) până la ameliorare
             </p>
             <div class="subcontainer">
               <div class="subcontainer-particle-1">
                 <b>ÎN PRIMA ZI</b>
 <!--                <b class="subtext"></b>-->
-                <p>1 comprimat la fiecare  oră</p>
+                <p>La fiecare  oră 1 comprimat</p>
               </div>
               <div class="subcontainer-particle-2">
                 <div class="clock-img"></div>
@@ -210,7 +210,7 @@
               </div>
               <div class="subcontainer-particle-1">
                 <b>
-                  TRATAMENTUL ULTERIOR
+                  TRATAMENT ULTERIOR
                 </b>
                 <b class="subtext">Până la recuperare</b>
                 <p>1-2 comprimate de 3 ori/zi</p>
@@ -230,7 +230,7 @@
         <div class="block-5__container">
           <div class="container__subcontainer">
             <p>
-              <b>Copii de la 1 - 12 ani:</b> de dizolvat în gură 1 comprimat de 3 ori/zi
+              <b>Copii de la 1 - 12 ani:</b> se dizolvă în gură 1 comprimat de 3 ori/zi
             </p>
             <div class="subcontainer vertical">
               <div class="subcontainer-particle-1">
@@ -246,12 +246,12 @@
 
           <div class="container__subcontainer">
             <p>
-              <b>Copii de la 12 ani și adulți:</b> de dizolvat în gură 1-2 comprimate de 3 ori/zi
+              <b>Copii de la 12 ani și adulți:</b> se dizolvă în gură 1-2 comprimate de 3 ori/zi
             </p>
             <div class="subcontainer vertical">
               <div class="subcontainer-particle-1">
                 <b>PE ZI</b>
-                <p>cel mult 6 comprimate pe zi</p>
+                <p>nu mai mult de 6 comprimate pe zi</p>
               </div>
               <div class="subcontainer-particle-2">
                 <div class="clock-img"></div>
@@ -270,7 +270,7 @@
         </div>
         <div class="bottom-text__b">
           <b>
-            Se dizolvă încet comprimatele în gură până la discompunerea completă. Pentru copii sub 3 ani se recomandă dizolvarea comprimatului într-o cantitate mică de lichid sau administrarea în formă zdrobită, sub limbă. Luați medicamentul cu 30 min înainte sau 30 min după mese.
+            Comprimatele se dizolvă lent în gură până la descompunerea completă. Pentru copii sub 3 ani se recomandă dizolvarea comprimatului într-o cantitate mică de lichid sau administrarea în formă zdrobită, sub limbă. Luați medicamentul cu 30 min înainte sau 30 min după masă.
           </b>
         </div>
         <a class="buy-btn pill-btn"><p>No text in translation</p></a>
@@ -367,13 +367,13 @@
                   <p>febră 38 ° C sau mai mult;</p>
                   <p>dureri în gât;</p>
                   <p>tuse;</p>
-                  <p>dureri în mușchi și articulații;</p>
+                  <p>dureri musculare și de articulații;</p>
                   <p>sunt posibile vomă și diaree.</p>
 
                 </div>
                   <p>Ca complicație a bolii - pneumonie, care uneori poate duce la moartea pacientului în 4-5 zile! Deseori se dezvoltă insuficiența cardiacă.</p>
-                <p>Dacă sunteți deja bolnav, adresați-vă la medicul de familie sau terapeut.</p>
-                <p class="panel__accent-text">Influcid este alegerea  potrivită în răceală și gripă.</p>
+                <p>Dacă sunteți deja bolnav, adresați-vă medicului de familie sau terapeutului.</p>
+                <p class="panel__accent-text">Influcid este alegerea  potrivită pentru răceală și gripă.</p>
                 <div class="panel__checklist">
                   <p>Activitate antivirală dovedită în gripa sezonieră H1N1, H5N2, H3N2 *.</p>
                   <p>Combate activ virușii gripali și IRVA *.</p>
@@ -392,11 +392,11 @@
             <div class="block-6__container">
               <div class="block-6__container-img"><p>Tratamentul răcelii la copil</p></div>
               <div class="block-6__container-text"><p>
-                Din păcate, este imposibil de protejaț complet copilul de răceală pentru toată viața. Mai ales când copilul în fiecare zi este înconjurat de colegi. Este suficient ca un copil la grădiniță sau la școală să se îmbolnăvească, și infecția se răspândește rapid mai departe. Îmbolnăvirea copilului presupune adesea concediu medical pentru mamă. Și aici apar întrebările: " Cum să tratezi rapid o răceală? Care este cel mai bun remediu?"</p>
+                Din păcate, este imposibil să vă protejați complet copilul de răceală pentru toată viața. Mai ales când copilul este înconjurat în fiecare zi de colegi. Este suficient ca un copil la grădiniță sau la școală să se îmbolnăvească, și infecția se răspândește rapid mai departe. Îmbolnăvirea copilului presupune adesea concediu medical pentru mamă. Și aici apar întrebările: " Cum să tratezi rapid o răceală? Care este cel mai bun remediu?"</p>
               </div>
               <button class="accordion">Detaliat</button>
               <div class="panel">
-                <p>Cel mai des copiii răcesc între vârsta de 6 luni și 12 ani, când se petrece formarea sistemul imunitar. Tratamentul eficient al copiilor cu răceală și IRVA necesită un răspuns imediat la primele semne:</p>
+                <p>Cel mai des copiii răcesc între vârsta de 6 luni și 12 ani, când se formează sistemul imunitar. Tratamentul eficient pentru răceală și IRVA la copii necesită un răspuns imediat la primele semne:</p>
 
                   <div class="panel__checklist">
                   <p>Slăbiciune, dureri de cap;</p>
