--- a/influcid/index-ru.html
+++ b/influcid/index-ru.html
@@ -499,6 +499,45 @@
               <a name="block-5"></a>
             </div>
 
+
+
+          <div class="block-6__container">
+            <div class="block-6__container-img"><p>Здоровые советы для здоровых людей</p></div>
+            <div class="block-6__container-text"><p>В этом году, как никогда ранее, мы постоянно адаптируемся к чему-то новому. Сейчас настало время ослабления карантина, готовы ли мы к этому? Что делать, чтобы сохранить свое здоровье как психическое, так и физическое?
+            </p>
+              <p>КАК ПРАВИЛЬНО АДАПТИРОВАТЬСЯ К ОСЛАБЛЕНИЮ КАРАНТИНА?</p>
+            </div>
+            <button class="accordion">Подробнее</button>
+            <div class="panel">
+              <p>Во время ослабления карантина люди могут чувствовать себя по-разному. Эмоциональные реакции на этом этапе могут включать:</p>
+              <ul>
+                <li>страх и тревогу за здоровье близких;</li>
+                <li>стресс из-за постоянного переживания за собственное здоровье;</li>
+                <li>грусть, гнев, фрустрацию из-за того, что друзья и близкие люди избегают контактов из-за опасений инфицирования;</li>
+                <li>чувство вины из-за того, что во время карантина не было возможности полноценно выполнять рабочие и / или родительские обязанности.</li>
+              </ul>
+              <p>Дети тоже могут испытывать различные эмоции во время ослабления карантина<sup>1</sup>.</p>
+              <p>Уровень агрессии среди населения сейчас действительно слишком высок. Длительные ограничения, приспособления к новым условиям жизни, удаленная работа / учеба, переменчивая холодная погода - все это приводит к конфликтам с близкими, агрессии за рулем, ссорам в социальных сетях и тому подобное.</p>
+              <p>Это не является здоровой реакцией с точки зрения психики. Чтобы избавиться от агрессии нормальным способом, предлагаем:</p>
+              <ul>
+                <li>Выделить немного времени на любимое хобби (кого-то успокаивает арт-терапия, кого-то привлекает вязание, а кому-то необходимо просто поиграть в любимую игру).</li>
+                <li>Делиться своими переживаниями с близкими. Но делать это спокойно и разговаривать открыто. Не накапливать в себе обиды.</li>
+                <li>Покричать. Да, иногда просто крик (НЕ на кого-то, а в одиночестве!) успокаивает. Также помогает громкое пение и активные танцевальные движения. Таким образом мы избавляемся от напряжения.</li>
+                <li>Спорт. Банально, но 100% действенный способ.</li>
+              </ul>
+
+
+              <p>Здоровые правила поведения для здоровья<br>
+                Не забывайте о бесконтактных приветствиях: улыбка, кивок головы. Поверьте, это нормально сказать человеку, который намерен вас обнять при встрече: «Извини, давай сейчас держать дистанцию. Я придерживаюсь правил. Уважай, пожалуйста, мой выбор». Без грубости, оскорблений и обвинений.<br>
+                Помимо соблюдения рекомендаций, гигиенических и социальных норм и правил, необходимо самостоятельно заботиться о своем здоровье и иммунитете. Лекарственное средство Инфлюцид усиливает естественную защиту организму<sup>2</sup>. Помните, что сейчас точно не время болеть. Применение препарата Инфлюцид при первых проявлениях симптомов острой респираторной вирусной инфекции и гриппа или сразу после контакта с людьми, которые заболели вирусной инфекцией, способствует предотвращению развития заболевания<sup>2</sup>. Для профилактики ОРВИ таблетку Инфлюцид медленно рассасывают во рту за 30 минут до или через 30 минут после еды 3 раза в сутки. Более подробная информация о способе применения в Инструкции.</p>
+              <p>Берегите себя, своих близких и тех, кто рядом с Вами. Желаем крепкого здоровья и стойкого иммунитета.</p>
+              <div class="panel__sub">
+                <p><sup>1</sup> https://phc.org.ua/news/yak-pravilno-adaptuvatisya-do-poslablennya-karantinu</p>
+                <p><sup>2</sup> Инструкция для медицинского использования к препарату Инфлюцид</p>
+              </div>
+            </div>
+          </div>
+
             <div class="block-7">
               <h2>Где купить</h2>
               <div id="comp_wgt" data-drug="11722,11721" data-lang="ru" data-url="https://compendium.com.ua/info/11096/infljutsid/" data-proj="инфлюцид" style="border-color: #2894cf; width: 80%"><div class="title" style="background: #2894cf;"><a href="https://compendium.com.ua/info/11096/infljutsid/" title="ИНФЛЮЦИД, Alpen Pharma AG" class="logo"><img src="https://compendium.com.ua/widget/compendium_ru.svg"></a><a href="https://compendium.com.ua/cart/" class="cart"><img src="https://compendium.com.ua/widget/cart.svg" data-pagespeed-url-hash="161338521" onload="pagespeed.CriticalImages.checkImageForCriticality(this);"><span id="comp_cnt" class="badge">0</span></a></div><ul role="tablist" class="nav nav-tabs"><li class="nav-item active"><a href="#comp_map" aria-controls="comp_map" role="tab" data-toggle="tab" class="nav-link active"><span>Карта</span></a></li><li class="nav-item"><a href="#comp_lst" aria-controls="comp_lst" role="tab" data-toggle="tab" class="nav-link">В аптеку</a></li><li class="nav-item"><a href="#comp_crt" aria-controls="comp_crt" role="tab" data-toggle="tab" class="nav-link"><span>Корзина</span></a></li></ul><div class="tab-content"><div id="comp_inf" class="tab-pane" style="height: 342px;"></div><div id="comp_map" class="tab-pane active" style="height: 342px;"></div><div id="comp_lst" class="tab-pane" style="height: 342px;"></div><div id="comp_crt" class="tab-pane" style="height: 342px;"></div></div></div><link rel="stylesheet" href="https://geowidget.morion.ua/css/style.css" type="text/css" media="all"/><link rel="stylesheet" href="https://compendium.com.ua/widget/widget.css" type="text/css" media="all"/><script src="https://compendium.com.ua/widget/widget.js" defer></script>
