--- a/influcid/index.html
+++ b/influcid/index.html
@@ -496,6 +496,47 @@
               <a name="block-5"></a>
             </div>
 
+<!--          new////-->
+
+          <div class="block-6__container">
+            <div class="block-6__container-img"><p>Здорові поради для здорових людей</p></div>
+            <div class="block-6__container-text"><p>Цього року, як ніколи раніше, ми постійно адаптуємося до чогось нового. Зараз настав час послаблення карантину, чи готові ми до цього? Що робити, щоб зберегти своє здоров’я як психічне, так і фізичне?
+              </p>
+              <p>ЯК ПРАВИЛЬНО АДАПТУВАТИСЯ ДО ПОСЛАБЛЕННЯ КАРАНТИНУ?</p>
+            </div>
+            <button class="accordion">Детальнiше</button>
+            <div class="panel">
+              <p>Під час послаблення карантину люди можуть почуватися по-різному. Емоційні реакції на цьому етапі можуть включати:</p>
+              <ul>
+                <li>страх і тривогу за здоров’я близьких;</li>
+                <li>стрес через постійне хвилювання за власне здоров’я;</li>
+                <li>смуток, гнів, фрустрацію через те, що друзі та близькі люди уникають контактів через побоювання інфікування;</li>
+                <li>почуття провини через те, що під час карантину не було змоги повноцінно виконувати робочі та/або батьківські обов’язки.</li>
+              </ul>
+              <p>Діти теж можуть відчувати різні емоції під час послаблення карантину<sup>1</sup>.</p>
+              <p>Рівень агресії серед населення зараз дійсно занадто високий. Довгі обмеження, пристосування до нових умов життя, дистанційна робота / навчання, мінлива холодна погода – все це призводить до конфліктів з близькими, агресії за кермом, сварок у соціальних мережах тощо.</p>
+              <p>Це не є здоровою реакцією з точки зору психіки. Щоб позбутися агресії нормальним способом, пропонуємо:</p>
+              <ul>
+                <li>Виділити трохи часу на улюблене хобі (когось заспокоює арт-терапія, когось приваблює в’язання, а комусь необхідно просто пограти в улюблену гру).</li>
+                <li>Ділитися своїми переживаннями з близькими. Але робити це спокійно та розмовляти відкрито. Не накопичуйте у собі образи. </li>
+                <li>Покричати. Так, іноді просто крик (НЕ на когось, а на самоті!) заспокоює. Також допомагає гучний спів і активні танцювальні рухи. Таким чином ми позбавляємося від напруги.</li>
+                <li>Спорт. Банально, але 100% дієвий спосіб</li>
+              </ul>
+
+
+              <p>Здорові правила поведінки для здоров’я<br>
+                Не забувайте про безконтактні привітання: усмішка, помах голови. Повірте, це нормально сказати людині, яка має намір вас обійняти при зустрічі: «Вибач, давай зараз тримати дистанцію. Я дотримуюся правил. Поважай, будь ласка, мій вибір». Без грубості, образ та звинувачень.<br>
+                Окрім дотримання рекомендацій, гігієнічних і соціальних норм та правил, необхідно самостійно піклуватися про своє здоров'я і імунітет. Лікарський засіб Інфлюцид посилює природний захист організму<sup>2</sup> .  Пам’ятайте, що зараз точно не час хворіти. Застосування препарату Інфлюцид при перших проявах симптомів гострої респіраторної вірусної інфекції та грипу або відразу після контакту з людьми, які захворіли на вірусну інфекцію, сприяє запобіганню розвитку захворювання<sup>2</sup>. Для профілактики ГРВІ таблетку Інфлюцид повільно розсмоктують у ротовій порожнині за 30 хвилин до або через 30 хвилин після їди 3 рази на добу. Більш детальна інформація про спосіб застосування в Інструкції. </p>
+              <p>Бережіть себе, своїх близьких та тих, хто поруч з Вами. Бажаємо міцного здоров’я та стійкого імунітету.</p>
+              <div class="panel__sub">
+                <p><sup>1</sup> https://phc.org.ua/news/yak-pravilno-adaptuvatisya-do-poslablennya-karantinu</p>
+                <p><sup>2</sup> Інструкція для медичного застосування до препарату Інфлюцид</p>
+              </div>
+            </div>
+          </div>
+
+          <!--          new////-->
+
             <div class="block-7">
               <h2>ДЕ КУПИТИ</h2>
               <div id="comp_wgt" data-drug="11722,11721" data-lang="ru" data-url="https://compendium.com.ua/info/11096/infljutsid/" data-proj="инфлюцид" style="border-color: #2894cf; width: 80%"><div class="title" style="background: #2894cf; "><a href="https://compendium.com.ua/info/11096/infljutsid/" title="ИНФЛЮЦИД, Alpen Pharma AG" class="logo"><img src="https://compendium.com.ua/widget/compendium_ru.svg"></a><a href="https://compendium.com.ua/cart/" class="cart"><img src="https://compendium.com.ua/widget/cart.svg" data-pagespeed-url-hash="161338521" onload="pagespeed.CriticalImages.checkImageForCriticality(this);"><span id="comp_cnt" class="badge">0</span></a></div><ul role="tablist" class="nav nav-tabs"><li class="nav-item active"><a href="#comp_map" aria-controls="comp_map" role="tab" data-toggle="tab" class="nav-link active"><span>Карта</span></a></li><li class="nav-item"><a href="#comp_lst" aria-controls="comp_lst" role="tab" data-toggle="tab" class="nav-link">В аптеку</a></li><li class="nav-item"><a href="#comp_crt" aria-controls="comp_crt" role="tab" data-toggle="tab" class="nav-link"><span>Корзина</span></a></li></ul><div class="tab-content"><div id="comp_inf" class="tab-pane" style="height: 342px;"></div><div id="comp_map" class="tab-pane active" style="height: 342px;"></div><div id="comp_lst" class="tab-pane" style="height: 342px;"></div><div id="comp_crt" class="tab-pane" style="height: 342px;"></div></div></div><link rel="stylesheet" href="https://geowidget.morion.ua/css/style.css" type="text/css" media="all"/><link rel="stylesheet" href="https://compendium.com.ua/widget/widget.css" type="text/css" media="all"/><script src="https://compendium.com.ua/widget/widget.js" defer></script>
