--- a/isla/index-ru.html
+++ b/isla/index-ru.html
@@ -49,7 +49,8 @@
 
 
 <div class="block block-1">
-    <div class="block-1__container block-1__container-ru"></div>
+    <div class="block-1__container block-1__container-ru man"></div>
+    <div class="block-1__container block-1__container-ru woman"></div>
     <div class="block-1__plate block-1__plate-ru"></div>
 </div>
 
