--- a/isla/index.html
+++ b/isla/index.html
@@ -49,7 +49,8 @@
 
 
 <div class="block block-1">
-    <div class="block-1__container"></div>
+    <div class="block-1__container man"></div>
+    <div class="block-1__container woman"></div>
     <div class="block-1__plate"></div>
 </div>
 
