--- a/influcid-Moldova/index.html
+++ b/influcid-Moldova/index.html
@@ -443,14 +443,14 @@
             <div class="block-7">
               <h2>Где купить</h2>
                <div class="apt-container">
-                <a href="https://farmaciafamiliei.md/"></a>
-                <a href="http://medicamente.md/"></a>
-                <a href="https://felicia.md/ro/"></a>
+                <a target="_blank" href="https://farmaciafamiliei.md/product/30275"></a>
+                <a target="_blank" href="http://medicamente.md/ru/product/23122"></a>
+                <a target="_blank" href="https://felicia.md/ro/5822631/"></a>
               
-                <a href="https://www.apteka.md/"></a>
-                <a href="https://farmacie.md/"></a>
-                <a href="https://www.farmacieonline.md/"></a>
-                <a href="https://farmacie-online.md/ru/"></a>
+                <a target="_blank" href="https://www.apteka.md/ro/Raceala-i-gripa/Influcid-comp-N20x3-p50827c94.html"></a>
+                <a target="_blank" href="https://farmacie.md/catalog/detail/34486/influcid_comp_n20x3"></a>
+                <a target="_blank" href="https://www.farmacieonline.md/medicamente/influcid-n20x3.html"></a>
+                <a target="_blank" href="https://farmacie-online.md/ru/24706-friendly-url-autogeneration-failed.html"></a>
               </div>
               <div class="block-7__text">
                 <h3>Доказательная база</h3>
