--- a/influcid-MN/index.html
+++ b/influcid-MN/index.html
@@ -26,7 +26,7 @@
             <div id="menuToggle">
               <input type="checkbox" /> <span></span> <span></span> <span></span>
               <ul id="menu">
-                <li><a class="navmenu" href="#block-1" >Benefits</a></li>
+                <li><a class="navmenu" href="#block-1" >ашиг тус</a></li>
                 <li><a class="navmenu" href="#block-2" >Эмийн үйлдэл</a></li>
                 <li><a class="navmenu" href="#block-3" >Найрлага</a></li>
                 <li><a class="navmenu" href="#block-4" >Хэрэглэх арга</a></li>
@@ -36,7 +36,7 @@
             </div>
           </div>
           <div class="desctop-navigation">
-            <a class="navmenu" href="#block-1" >Benefits</a>
+            <a class="navmenu" href="#block-1" >ашиг тус</a>
               <a class="navmenu" href="#block-2" >Эмийн үйлдэл</a>
               <a class="navmenu" href="#block-3" >Найрлага</a>
               <a class="navmenu" href="#block-4" >Хэрэглэх арга</a>
@@ -276,7 +276,7 @@
                 <p>2019 – 2020 оны томуугийн дэгдэлтийн онцлог юү вэ?</p>
 
               </div>
-              <button class="accordion">detailed</button>
+              <button class="accordion">дэлгэрэнгуй</button>
               <div class="panel">
                 <p> ДЭМБ урьдчилсан төлвөөр  дэлхийн бөмбөрцгийн умард хэсэгт томуугийн вирусийн дараах омгууд дэгдэнэ:</p>
                 <ul>
@@ -320,7 +320,7 @@
               <div class="block-6__container-text"><p>
                 Харамсалтай нь бид хүүхдээ насан туршид нь ханиад томуугаас сэргийлж чадахгүй бөгөөд ялангуяа таны хүүхэд өдөр тутам өөртэйгээ ижил насны хүүхдүүдтэй хамт байдаг бол өвдөх эрсдэл нэмэгдэнэ. Цэцэрлэг эсвэл сургуульд нэг л хүүхэд ханиадтай ирэхэд халдвар хурдан хугацаанд дамждаг. Хүүхэд ханиад хүрэхэд ээж заавал магадалгаа авахад хүрнэ. Энэ үед: «Ханиадыг яаж хурдан эмчлэх вэ? Ханиаданд ямар эм сайн вэ ? Ханиаднаас яаж хурдан салах вэ? Юү хийвэл цөөн удаа өвдөж бага хохиролтой салах вэ? » гэдэг олон асуулт гарч ирдэг.</p>
               </div>
-              <button class="accordion">detailed</button>
+              <button class="accordion">дэлгэрэнгуй</button>
               <div class="panel">
                 <p> Өвчлөл 6 сараас 12 нас хүртэлх хүүхдэд илүү олон тохиолдоно. Яг энэ үед л хүүхдийн дархлааны систем бүрэлдэж байдаг юм.
                   Ханиад томуугийн эхний шинж тэмдэг илэрсэн үед яаралтай арга хэмжээ авахад үр дүн сайн: </p>
@@ -372,13 +372,17 @@
               <br>
               Ексклюзивний дистриб'ютор: ПрАТ «Натурфарм», вул.Лісна, 30а, м.Київ, Пуща-Водиця, 04075; телефон: (044) 401-81-03
             </p> -->
+            <p>
+            	Улаанбаатар хот.Баянгол дуурэг 14 хороо 3 хороолол VIP төв 403 тоот.Тел:976 99046767.<br>
+            	Регитрационный №F20120507RO03018 Дата:05.07.2017
+            </p>
             <div class="logos-container">
-              <a class="disclamer-tra__logo" href=""><p><b>manufacturer:</b><br>DHU (Germany)<br>https://www.dhu.de/</p></a>
-              <a class="disclamer-tra__alpen" href="http://alpenpharma.com"><p><b>importer:</b><br> Alpen Pharm<br>(Switzerland)</p></a>
+              <a class="disclamer-tra__logo" href=""><p><b>уйлдвэрлэгч:</b><br>DHU (Germany)<br>https://www.dhu.de/</p></a>
+              <a class="disclamer-tra__alpen" href="http://alpenpharma.com"><p><b>импортлогч:</b><br> Alpen Pharm<br>(Switzerland)</p></a>
             </div>
           </div>
           <div class="disclamer-warning">
-            <p>SELF-TREATMENT CAN BE DANGEROUS TO YOUR HEALTH</p>
+            <p>Эм хэрэглэхийн өмнө эмчээс зөвлөлгөө авна уу</p>
           </div>
 
 
